Cleanups around ConfigPropertyNode
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>